@@ -1,1 +1,1 @@
-A small PAM module to check FreeRDP for credentials
+A small PAM module to check an X2Go Server (SSH) for credentials
