@@ -12,17 +12,19 @@ Build-Depends:
  pkg-config,
  cdbs (>= 0.4.93~),
  dh-autoreconf,
-Standards-Version: 3.9.3
+Standards-Version: 3.9.4
 Homepage: http://wiki.x2go.org
 Vcs-Git: git://code.x2go.org/libpam-x2go.git
+Vcs-Browser: http://code.x2go.org/gitweb?p=libpam-x2go.git;a=summary
 
 Package: libpam-x2go
 Architecture: any
 Depends:
  ${shlibs:Depends},
  ${misc:Depends},
- pyhoca-cli,
+Suggests:
+ x2goclient | pyhoca-cli,
 Description: PAM Module to auth against an X2Go server using PyHoca
- Auth and session PAM module that uses PyHoca to authenticate against
+ Auth and session PAM module that uses SSH to authenticate against
  an X2Go server as the remote host and user. Local account required.
  Most useful with the pam-temp-account module.
