@@ -4,13 +4,13 @@ Source: http://code.x2go.org/gitweb?p=libpam-x2go.git;a=summary
 
 Files: *
 Copyright:
- 2012, Mike Gabriel (X2Go Project) <mike.gabriel@das-netzwerkteam.de>
+ 2012-2013, Mike Gabriel (X2Go Project) <mike.gabriel@das-netzwerkteam.de>
  2012, Canonical Ltd.
 License: GPL-3
 
 Files: debian/*
 Copyright: 
- 2012, Mike Gabriel (X2Go Project) <mike.gabriel@das-netzwerkteam.de>
+ 2012-2013, Mike Gabriel (X2Go Project) <mike.gabriel@das-netzwerkteam.de>
 License: GPL-3
 
 License: GPL-3
