@@ -1,5 +1,5 @@
 /*
- * Copyright © 2012 Mike Gabriel <mike.gabriel@das-netzwerkteam.de>.
+ * Copyright © 2012-2013 Mike Gabriel <mike.gabriel@das-netzwerkteam.de>.
  * Copyright © 2012 Canonical Ltd. All rights reserved.
  *
  * Author(s): Mike Gabriel <mike.gabriel@das-netzwerkteam.de>
@@ -23,17 +23,17 @@ const char * auth_check_path = AUTH_CHECK;
 namespace {
 
   // The fixture for testing class Foo.
-  class PyhocaWrapperTest : public ::testing::Test {
+  class X2GoWrapperTest : public ::testing::Test {
   protected:
     // You can remove any or all of the following functions if its body
     // is empty.
 
-    PyhocaWrapperTest() {
+    X2GoWrapperTest() {
       // You can do set-up work for each test here.
 		setenv("HOME", "/tmp", 1 /* overwrite */);
     }
 
-    virtual ~PyhocaWrapperTest() {
+    virtual ~X2GoWrapperTest() {
       // You can do clean-up work that doesn't throw exceptions here.
     }
 
@@ -55,12 +55,12 @@ namespace {
     // Objects declared here can be used by all tests in the test case for Foo.
   };
 
-  TEST_F(PyhocaWrapperTest, canLinkTheWholeGang) {
+  TEST_F(X2GoWrapperTest, canLinkTheWholeGang) {
 	  EXPECT_EQ (1, 1); // right, that's trivial, but that means
 	                    // that I got all of the wrapper and pam to link there
   }
 
-  TEST_F(PyhocaWrapperTest, canCallPamOpenSession) {
+  TEST_F(X2GoWrapperTest, canCallPamOpenSession) {
 	  const char *argv[] = { NULL };
 
 	  pam_handle_t *pamh = pam_handle_new ();
